Added root page of the website system

--- a/src/main/resources/static/ui/index.html
+++ b/src/main/resources/static/ui/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -8,20 +8,20 @@
 </head>
 <body>
     <div class="container">
-        <h1>测试控制面板</h1>
+        <h1>Test Control Panel</h1>
         <nav class="nav">
-            <button id="btn-status">应用状态 ( /test )</button>
-            <button id="btn-members">所有成员 ( /memberlist )</button>
-            <label for="memberId"></label><input id="memberId" placeholder="输入成员ID" />
-            <button id="btn-member">查看成员 ( /member &lt;id&gt; )</button>
+            <button id="btn-status">Application Status ( /test )</button>
+            <button id="btn-members">All Members ( /memberlist )</button>
+            <label for="memberId"></label><input id="memberId" placeholder="Enter Member ID" />
+            <button id="btn-member">View Member ( /member &lt;id&gt; )</button>
         </nav>
 
         <main id="main">
-            <p class="hint">点击上方按钮开始测试接口。</p>
+            <p class="hint">Click the buttons above to start testing the API.</p>
         </main>
 
         <footer>
-            <small>前端简单示例 — 使用 fetch 调用后端 REST</small>
+            <small>Simple frontend example — Using fetch to call backend REST</small>
         </footer>
     </div>
 
