--- a/Architecture & Contributors.html
+++ b/Architecture & Contributors.html
@@ -259,26 +259,30 @@
 
     <div class="hint">Tip: Click a role below to highlight its modules; click again to clear.</div>
 
-    <div class="legend">
-        <div class="legend-item" data-author="chuhang" onclick="highlight('chuhang')">
-            <div class="dot dot-mixed"></div> Chuhang Zhang (Controller/Framework)
-            <span class="click-badge">Clickable</span>
+    <div class="legend" style="flex-wrap: wrap;">
+        <div style="display: flex; gap: 20px; width: 100%; justify-content: center;">
+            <div class="legend-item" data-author="chuhang" onclick="highlight('chuhang')">
+                <div class="dot dot-mixed"></div> Chuhang Zhang (Controller/Framework)
+                <span class="click-badge">Clickable</span>
+            </div>
+            <div class="legend-item" data-author="xuyang" onclick="highlight('xuyang')">
+                <div class="dot dot-mixed"></div> Xuyang Zhou (Service Logic/Algo)
+                <span class="click-badge">Clickable</span>
+            </div>
+            <div class="legend-item" data-author="kaicai" onclick="highlight('kaicai')">
+                <div class="dot dot-mixed"></div> Kai Cai (Repository/Data)
+                <span class="click-badge">Clickable</span>
+            </div>
         </div>
-        <div class="legend-item" data-author="xuyang" onclick="highlight('xuyang')">
-            <div class="dot dot-mixed"></div> Xuyang Zhou (Service Logic/Algo)
-            <span class="click-badge">Clickable</span>
-        </div>
-        <div class="legend-item" data-author="kaicai" onclick="highlight('kaicai')">
-            <div class="dot dot-mixed"></div> Kai Cai (Repository/Data)
-            <span class="click-badge">Clickable</span>
-        </div>
-        <div class="legend-item" data-author="ximing" onclick="highlight('ximing')">
-            <div class="dot dot-mixed"></div> Ximing Chen (Entities/DTO)
-            <span class="click-badge">Clickable</span>
-        </div>
-        <div class="legend-item" data-author="ai" onclick="highlight('ai')">
-            <div class="dot dot-mixed"></div> AI Tutors (Guidance)
-            <span class="click-badge">Clickable</span>
+        <div style="display: flex; gap: 20px; width: 100%; justify-content: center; margin-top: 10px;">
+            <div class="legend-item" data-author="ximing" onclick="highlight('ximing')">
+                <div class="dot dot-mixed"></div> Ximing Chen (Entities/DTO)
+                <span class="click-badge">Clickable</span>
+            </div>
+            <div class="legend-item" data-author="ai" onclick="highlight('ai')">
+                <div class="dot dot-mixed"></div> AI Tutors (Guidance)
+                <span class="click-badge">Clickable</span>
+            </div>
         </div>
     </div>
 
